# Computer_Vision_ESIGELEC_AES_2026

./: .gitattributes.txt  .gitignore  CMakeLists.txt  README.md
app/: Detect_red_pixels_draw_centroid.cpp  display_video_stream.cpp  eco_webcam.py  finger_motion_based_virtual_piano.py  finger_tracked_windows_cursor_control.py  finger_tracking_game.py  image_zoom_and_swipe_finger_motion.py  invisible_cloak.cpp  room_alarm_opencv.cpp  test_1.cpp  test_4.cpp  test_7.py  test_8.py  test_9.py  test_v4_1.py  yono_object_detection.py
resources/: scores.csv
